--- a/example/index.html
+++ b/example/index.html
@@ -120,6 +120,50 @@
                     transform: translateY(0) rotate(0);
                 }
             }
+            @keyframes menu-show {
+                0% {
+                    opacity: 0;
+                    height: 0%;
+                }
+                100% {
+                    opacity: 1;
+                    height: 100%;
+                }
+            }
+            @keyframes menu-reserve {
+                0% {
+                    opacity: 1;
+                    height: 100%;
+                }
+                100% {
+                    opacity: 0;
+                    height: 0%;
+                }
+            }
+            @keyframes menu-show {
+                0% {
+                    opacity: 0;
+                    height: 0%;
+                }
+                100% {
+                    opacity: 1;
+                    height: 100%;
+                }
+            }
+            @keyframes menu-reserve {
+                0% {
+                    opacity: 1;
+                    height: 100%;
+                }
+                100% {
+                    opacity: 0;
+                    height: 0%;
+                }
+            }
+            .menu-button-bar.no-animation,
+            #menu.no-animation {
+                animation: none !important;
+            }
             .menu-button.active .menu-button-bar:nth-child(1) {
                 animation: top-bar 0.3s forwards;
             }
@@ -137,6 +181,12 @@
             }
             .menu-button:not(.active) .menu-button-bar:nth-child(3) {
                 animation: bottom-bar-reverse 0.3s forwards;
+            }
+            #menu.active {
+                animation: menu-show 0.5s forwards;
+            }
+            #menu:not(.active) {
+                animation: menu-reserve 0.5s forwards;
             }
             :root {
                 --theme-color: #ff3300;
@@ -178,6 +228,7 @@
                 top: 0px;
                 left: 0px;
                 padding: 18px 0px 0px 18px;
+                z-index: 2000;
             }
             .menu-button-bar {
                 display: block;
@@ -189,6 +240,7 @@
                 margin: 0 0 3px 0;
                 transition: none;
                 transform-origin: center;
+                z-index: 2001;
             }
             .logo {
                 display: flex;
@@ -202,7 +254,7 @@
                 top: 0px;
                 height: 46px;
                 user-select: none;
-                z-index: 1002;
+                z-index: 1001;
                 padding-top: 1px;
                 color: var(--theme-color);
                 user-select: none;
@@ -217,6 +269,7 @@
                 height: 46px;
                 color: var(--theme-color);
                 cursor: default;
+                z-index: 1001;
             }
             .header box-icon {
                 display: flex;
@@ -226,6 +279,7 @@
                 width: 46px;
                 padding: 10px;
                 cursor: pointer;
+                z-index: 1001;
             }
             #top {
                 display: flex;
@@ -256,7 +310,7 @@
                 transition: all 0.3s ease-in-out;
             }
             .card:hover {
-                box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px;
+                box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 15px;
                 transition: all 0.3s ease-in-out;
             }
             .bottom {
@@ -285,37 +339,125 @@
                 transition: all 0.3s ease-in-out;
             }
             .to-top:hover {
-                box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px;
-                transition: all 0.1s ease-in-out;
+                box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 2px;
+                transition: all 0.2s ease-in-out;
             }
-            /* 适配横屏 */
-            /* @media screen and (min-width: 768px) {
-            } */
+            #menu {
+                display: flex;
+                opacity: 0;
+                background-color: #ffffffcc;
+                backdrop-filter: blur(7px);
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                z-index: 999;
+                flex-direction: column;
+                overflow: scroll;
+                z-index: 1500;
+                transition: all 0.3s ease-in-out;
+                scrollbar-width: none;
+            }
+            .menu-item-title {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                font-size: 16px;
+                color: #d0d0d0;
+                margin: 5px 46px 2px;
+                z-index: 1501;
+            }
+            .menu-item-title:first-child {
+                margin: 46px 46px 2px;
+            }
+            .menu-item {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                font-size: 20px;
+                font-weight: 600;
+                color: var(--font-color);
+                text-decoration: none;
+                margin: 0 46px 0;
+                padding: 8px 0;
+                z-index: 1501;
+            }
+            .menu-item:last-child {
+                margin: 0 46px 33px;
+            }
             /* 适配深色模式 */
-            /* @media (prefers-color-scheme: dark) {
-                body {
-                    background-color: black;
+            @media (prefers-color-scheme: dark) {
+                :root {
+                    --theme-color: #f5f5f5;
+                    --font-color: #f5f5f5;
+                    --bottom-icon-color: #333333;
+                    --is-dark: true;
                 }
-            } */
+                body {
+                    background-color: #1e1e1e;
+                }
+                .card {
+                    background-color: #333333;
+                }
+                .header {
+                    background-color: #181818cc;
+                }
+                #menu {
+                    background-color: #181818cc;
+                }
+                .menu-item-title {
+                    color: #505050;
+                }
+            }
+            /* 宽屏 */
+            @media screen and (min-width: 600px) {
+                #menu.active {
+                    animation: none;
+                    opacity: 1;
+                    transform: translateX(0);
+                }
+                #menu:not(.active) {
+                    animation: none;
+                    opacity: 0;
+                    transform: translateX(-375px);
+                }
+                :root {
+                    --is-wide: true;
+                }
+                #menu {
+                    width: 375px;
+                    box-shadow: rgba(0, 0, 0, 0.1) 3px 0px 5px;
+                    transform: translateX(-100%);
+                }
+            }
+            /* 宽屏深色 */
+            @media screen and (min-width: 600px) and (prefers-color-scheme: dark) {
+                :root {
+                    --is-dark: true;
+                }
+                #menu {
+                    background-color: #181818cc;
+                }
+            }
         </style>
     </head>
     <body>
         <!-- 头部栏 -->
+        <div class="menu-button">
+            <span class="menu-button-bar no-animation"></span>
+            <span class="menu-button-bar no-animation"></span>
+            <span class="menu-button-bar no-animation"></span>
+        </div>
         <div class="header">
-            <div class="menu-button">
-                <span class="menu-button-bar"></span>
-                <span class="menu-button-bar"></span>
-                <span class="menu-button-bar"></span>
-            </div>
             <div class="logo">
                 RISINGSUN
                 <div id="today">今天什么日子</div>
             </div>
-            <box-icon name="user-circle" color="var(--font-color)"></box-icon>
-            <box-icon name="search" color="var(--font-color)"></box-icon>
+            <box-icon name="user-circle" color="var(--font-color)" id="user-button"></box-icon>
+            <box-icon name="search" color="var(--font-color)" id="search-button"></box-icon>
         </div>
+        <div id="menu" class="no-animation"></div>
         <!-- 内容区 -->
-        <div style="display: flex; flex-direction: column; flex: 1; overflow: auto; transform: translateZ(0); will-change: transform; overscroll-behavior: contain">
+        <div style="display: flex; flex-direction: column; flex: 1; overflow: scroll; transform: translateZ(0); will-change: transform; overscroll-behavior: contain">
             <!-- 置顶内容区 -->
             <div id="top"></div>
             <!-- 内容区卡片 -->
@@ -350,27 +492,19 @@
     <!-- <box-icon type = "regular|solid|logo" name="adjust|alarms|etc...." color="blue|red|etc..." size="xs|sm|md|lg|cssSize" rotate="90|180|270" flip="horizontal|vertical" border="square|circle" animation="spin|tada|etc..." pull = "left|right"></box-icon> -->
     <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
     <script>
-        /**
-         * @description: 延时（毫秒）
-         * @param {Number} ms
-         */
-        function sleep(ms) {
-            return new Promise((resolve) => setTimeout(resolve, ms));
-        }
-        document.addEventListener("DOMContentLoaded", () => {
-            // 监听按钮点击事件
-            const menuButton = document.querySelector(".menu-button");
-            menuButton.addEventListener("click", function (e) {
-                e.preventDefault();
-                this.classList.toggle("active");
-            });
-            const logo = document.querySelector(".logo");
-            logo.addEventListener("click", function (e) {
-                window.location.href = "/index.html";
-            });
-            // 初始化
-            showTopContent();
-        });
+        // 变量声明
+        let isDebug = true;
+        let isMenuShown = false;
+        const menuButton = document.querySelector(".menu-button");
+        const menuButtonBars = document.querySelectorAll(".menu-button-bar");
+        const logo = document.querySelector(".logo");
+        const header = document.querySelector(".header");
+        const userButton = document.querySelector("#user-button");
+        const searchButton = document.querySelector("#search-button");
+        const menuContainer = document.getElementById("menu");
+
+        // 函数
+
         /**
          * @description: 显示置顶内容
          */
@@ -394,5 +528,82 @@
             document.getElementById("top").innerHTML += ":D";
             return;
         }
+
+        /**
+         * @description: 延时（毫秒）
+         * @param {Number} ms
+         */
+        function sleep(ms) {
+            return new Promise((resolve) => setTimeout(resolve, ms));
+        }
+
+        /**
+         * @description: 控制台输出，仅当isDebug为true时输出
+         * @param {*} content
+         * @param {String} type i-info, w-warn, e-error
+         */
+        function log(content, type) {
+            if (!isDebug) return;
+            switch (type) {
+                case "i":
+                    console.log(content);
+                    break;
+                case "w":
+                    console.warn(content);
+                    break;
+                case "e":
+                    console.error(content);
+                    break;
+                default:
+                    console.log(content);
+                    break;
+            }
+        }
+
+        // 按钮监听
+
+        menuButton.addEventListener("click", function (e) {
+            e.preventDefault();
+            menuContainer.classList.toggle("active");
+            menuButton.classList.toggle("active");
+            menuButtonBars.forEach((bar) => {
+                bar.classList.remove("no-animation");
+            });
+            menuContainer.classList.remove("no-animation");
+        });
+        logo.addEventListener("click", function (e) {
+            e.preventDefault();
+            window.location.href = "/index.html";
+        });
+        userButton.addEventListener("click", function (e) {
+            e.preventDefault();
+            window.location.href = "/404.html?=这个功能还没做:D";
+        });
+        searchButton.addEventListener("click", function (e) {
+            e.preventDefault();
+            window.location.href = "/404.html?=这个功能还没做:D";
+        });
+
+        // 初始化
+        window.addEventListener("DOMContentLoaded", () => {
+            showTopContent();
+            fetch("/config/menu.json")
+                .then((response) => response.json())
+                .then((menuItems) => {
+                    for (const category in menuItems) {
+                        const categoryTitle = document.createElement("div");
+                        categoryTitle.className = "menu-item-title";
+                        categoryTitle.textContent = category;
+                        menuContainer.appendChild(categoryTitle);
+                        menuItems[category].forEach((item) => {
+                            const itemLink = document.createElement("a");
+                            itemLink.className = "menu-item";
+                            itemLink.href = item.url;
+                            itemLink.textContent = item.name;
+                            menuContainer.appendChild(itemLink);
+                        });
+                    }
+                });
+        });
     </script>
 </html>
