--- a/example/index.html
+++ b/example/index.html
@@ -140,6 +140,30 @@
                     height: 0%;
                 }
             }
+            @keyframes notification-show {
+                0% {
+                    opacity: 0;
+                    margin: 0;
+                    padding: 0;
+                }
+                100% {
+                    opacity: 1;
+                    margin: 5px 0;
+                    padding: 10px;
+                }
+            }
+            @keyframes notification-hide {
+                0% {
+                    opacity: 1;
+                    margin: 5px 0;
+                    padding: 10px;
+                }
+                100% {
+                    opacity: 0;
+                    margin: 0;
+                    padding: 0;
+                }
+            }
             .menu-button-bar.no-animation,
             #menu.no-animation {
                 animation: none !important;
@@ -172,6 +196,9 @@
                 --theme-color: #ff3300;
                 --font-color: #24292e;
                 --bottom-icon-color: #d9d9d9;
+                --notification-i-color: #1565c0;
+                --notification-w-color: #f57f17;
+                --notification-e-color: #c62828;
             }
             * {
                 margin: 0;
@@ -184,6 +211,9 @@
                 background-color: #f7f7f7;
                 display: flex;
                 flex-direction: column;
+            }
+            b {
+                font-weight: 700;
             }
             .header {
                 display: flex;
@@ -285,13 +315,53 @@
                 background-color: #ffffff;
                 box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 5px;
                 height: 70px;
-                padding: 25px;
+                padding: 15px 25px 15px;
                 border-radius: 15px;
                 transition: all 0.3s ease-in-out;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
             }
             .card:hover {
                 box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 15px;
                 transition: all 0.3s ease-in-out;
+            }
+            .card .button-container {
+                display: flex;
+                margin-top: 10px;
+                justify-content: center;
+                align-items: flex-end;
+            }
+            button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 40px;
+                width: 90px;
+                padding: 7px;
+                margin: 5px 10px;
+                border-radius: 10px;
+                font-size: 16px;
+                font-weight: 600;
+                cursor: pointer;
+            }
+            button.solid {
+                background-color: #0071e3;
+                color: #ffffff;
+                border: none;
+            }
+            button.solid:active {
+                background-color: #0060e3;
+            }
+            button.hollow {
+                background-color: #ffffff00;
+                color: #0b7ef2;
+                border: #0071e3 1px solid;
+            }
+            button.hollow:active {
+                color: #0b60e3;
+                border: #0060e3 1px solid;
+                box-shadow: rgba(0, 0, 0, 0.2) 0 0 2px inset;
             }
             .bottom {
                 display: flex;
@@ -364,11 +434,69 @@
             .menu-item:last-child {
                 margin: 0 46px 33px;
             }
+            #notification-container {
+                display: flex;
+                flex-direction: column-reverse;
+                position: fixed;
+                top: 51px;
+                width: 100%;
+                justify-items: center;
+                align-items: center;
+                z-index: 990;
+            }
+            .notification {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                max-width: 300px;
+                margin: 5px 0;
+                padding: 10px;
+                font-size: 14px;
+                z-index: 1491;
+                border: 1px solid;
+                border-radius: 10px;
+                box-shadow: rgba(0, 0, 0, 0.3) 0 0 5px;
+                backdrop-filter: blur(7px);
+                white-space: pre-wrap;
+                overflow-wrap: break-word;
+                animation: notification-show 0.2s ease-out forwards;
+            }
+            .notification.hiding {
+                animation: notification-hide 0.2s ease-in forwards;
+            }
+            .notification box-icon {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 20px;
+                width: 20px;
+                margin-right: 10px;
+                flex-shrink: 0;
+            }
+            .notification.i {
+                background-color: #e3f2fdcc;
+                border-color: #90caf9;
+                color: var(--notification-i-color);
+            }
+            .notification.w {
+                background-color: #fff9c4cc;
+                border-color: #fff176;
+                color: var(--notification-w-color);
+            }
+            .notification.e {
+                background-color: #ffebeecc;
+                border-color: #ef9a9a;
+                color: var(--notification-e-color);
+            }
             /* 适配深色模式 */
             @media (prefers-color-scheme: dark) {
                 :root {
                     --font-color: #f5f5f5;
                     --bottom-icon-color: #333333;
+                    --notification-i-color: #bbdefb;
+                    --notification-w-color: #fff3e0;
+                    --notification-e-color: #ffcdd2;
                 }
                 .logo {
                     color: var(--font-color);
@@ -390,6 +518,18 @@
                 }
                 .menu-item-title {
                     color: #505050;
+                }
+                .notification.i {
+                    background-color: #0d47a1cc;
+                    border-color: #1565c0;
+                }
+                .notification.w {
+                    background-color: #ff6f00cc;
+                    border-color: #d84315;
+                }
+                .notification.e {
+                    background-color: #b71c1ccc;
+                    border-color: #c62828;
                 }
             }
             /* 宽屏 */
@@ -435,6 +575,7 @@
             <box-icon name="search" color="var(--font-color)" id="search-button"></box-icon>
         </div>
         <div id="menu" class="no-animation"></div>
+        <div id="notification-container"></div>
         <!-- 内容区 -->
         <div style="display: flex; flex-direction: column; flex: 1; overflow: scroll; transform: translateZ(0); will-change: transform; overscroll-behavior: contain">
             <!-- 置顶内容区 -->
@@ -442,19 +583,48 @@
             <!-- 内容区卡片 -->
             <div class="cards-container">
                 <div class="card">
-                    我是一个
-                    <div style="font-weight: 700">卡片</div>
+                    <div>我是一个<b>卡片</b></div>
                 </div>
-                <div class="card" style="font-weight: 700">显示普通通知</div>
-                <div class="card" style="font-weight: 700">显示警告通知</div>
-                <div class="card" style="font-weight: 700">显示错误通知</div>
-                <div class="card">你好，世界！</div>
+                <div class="card" style="font-weight: 700">
+                    显示普通通知
+                    <div class="button-container">
+                        <button class="hollow" onclick="showNotification('登录成功！\n欢迎回来，${username}。');showNotification('已退出登录。');showNotification('页面已加载。')">3连发</button>
+                        <button class="solid" onclick="showNotification('已显示普通通知')">显示</button>
+                    </div>
+                </div>
+                <div class="card" style="font-weight: 700">
+                    显示警告通知
+                    <div class="button-container">
+                        <button class="hollow" onclick="showNotification('请填写必填项。','w');showNotification('SVIP即将到期。\n剩余：${leftDays}天。','w');showNotification('登录已过期，请重新登录。','w')">3连发</button>
+                        <button class="solid" onclick="showNotification('已显示警告通知','w')">显示</button>
+                    </div>
+                </div>
+                <div class="card" style="font-weight: 700">
+                    显示错误通知
+                    <div class="button-container">
+                        <button class="hollow" onclick="showNotification('用户名或密码错误！','e');showNotification('无法连接至服务器。','e');showNotification('你无权访问此项。','e')">3连发</button>
+                        <button class="solid" onclick="showNotification('已显示错误通知','e')">显示</button>
+                    </div>
+                </div>
+                <div class="card">
+                    你好，世界！
+                    <div class="button-container">
+                        <button class="hollow" onclick="showNotification('HELLO WORLD!','i',10000)">知道了</button>
+                    </div>
+                </div>
                 <div class="card" style="font-family: 'JetBrainsMono'">Hello World!</div>
                 <div class="card" style="font-family: 'JetBrainsMono'; font-weight: bold">Hello World!</div>
                 <div class="card" style="font-family: 'JetBrainsMono'; font-style: italic">Hello World!</div>
                 <div class="card" style="font-family: 'JetBrainsMono'; font-style: italic; font-weight: bold">Hello World!</div>
                 <div class="card" style="font-family: 'XBC'">RISINGSUN BoringClub 2025</div>
                 <div class="card" style="font-family: 'RSLOGO'; font-size: 25px">RISINGSUN GROUP 2025</div>
+                <div class="card" style="height: 100px">
+                    <b>问题反馈</b>
+                    feedback@rsdev.dpdns.org
+                    <div class="button-container">
+                        <button class="solid" onclick="window.location.href = 'mailto:feedback@rsdev.dpdns.org?subject=【问题反馈】此处填写标题'">反馈</button>
+                    </div>
+                </div>
             </div>
             <!-- 底栏 -->
             <div class="bottom">
@@ -469,18 +639,18 @@
     <!-- boxicons: https://boxicons.com/ https://github.com/atisawd/boxicons -->
     <!-- 调用方法 -->
     <!-- <box-icon type = "regular|solid|logo" name="adjust|alarms|etc...." color="blue|red|etc..." size="xs|sm|md|lg|cssSize" rotate="90|180|270" flip="horizontal|vertical" border="square|circle" animation="spin|tada|etc..." pull = "left|right"></box-icon> -->
-    <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script>
         // 变量声明
-        let isDebug = true;
         let isMenuShown = false;
         const menuButton = document.querySelector(".menu-button");
         const menuButtonBars = document.querySelectorAll(".menu-button-bar");
         const logo = document.querySelector(".logo");
         const header = document.querySelector(".header");
-        const userButton = document.querySelector("#user-button");
-        const searchButton = document.querySelector("#search-button");
+        const userButton = document.getElementById("user-button");
+        const searchButton = document.getElementById("search-button");
         const menuContainer = document.getElementById("menu");
+        const notificationContainer = document.getElementById("notification-container");
 
         // 函数
 
@@ -517,26 +687,57 @@
         }
 
         /**
-         * @description: 控制台输出，仅当isDebug为true时输出
-         * @param {*} content
-         * @param {String} type i-info, w-warn, e-error
+         * @description: 显示通知
+         * @param {String} content
+         * @param {String} type
+         * @param {Number} ms
          */
-        function log(content, type) {
-            if (!isDebug) return;
+        async function showNotification(content, type, ms) {
+            if (!type) type = "i";
+            if (!ms) ms = 3200;
+            let iconName, iconColor, className;
             switch (type) {
                 case "i":
-                    console.log(content);
+                    iconName = "info-circle";
+                    iconColor = "var(--notification-i-color)";
+                    className = "notification i";
                     break;
                 case "w":
-                    console.warn(content);
+                    iconName = "error";
+                    iconColor = "var(--notification-w-color)";
+                    className = "notification w";
                     break;
                 case "e":
-                    console.error(content);
+                    iconName = "error-alt";
+                    iconColor = "var(--notification-e-color)";
+                    className = "notification e";
                     break;
                 default:
-                    console.log(content);
+                    iconName = "info-circle";
+                    iconColor = "var(--notification-i-color)";
+                    className = "notification i";
                     break;
             }
+            const notification = document.createElement("div");
+            notification.className = className;
+            const icon = document.createElement("box-icon");
+            icon.setAttribute("name", iconName);
+            icon.setAttribute("color", iconColor);
+            const text = document.createTextNode(content);
+            notification.appendChild(icon);
+            notification.appendChild(text);
+            notificationContainer.appendChild(notification);
+            notification.addEventListener("click", () => {
+                notification.classList.add("hiding");
+                notification.addEventListener("animationend", () => {
+                    notification.remove();
+                });
+            });
+            await sleep(ms);
+            notification.classList.add("hiding");
+            notification.addEventListener("animationend", () => {
+                notification.remove();
+            });
         }
 
         // 按钮监听
@@ -556,16 +757,19 @@
         });
         userButton.addEventListener("click", function (e) {
             e.preventDefault();
-            window.location.href = "/404.html?=这个功能还没做:D";
+            showNotification("这个功能还没做:D");
         });
         searchButton.addEventListener("click", function (e) {
             e.preventDefault();
-            window.location.href = "/404.html?=这个功能还没做:D";
+            showNotification("这个功能还没做:D");
         });
 
         // 初始化
+
         window.addEventListener("DOMContentLoaded", () => {
+            // 显示置顶内容
             showTopContent();
+            // 载入菜单
             fetch("/config/menu.json")
                 .then((response) => response.json())
                 .then((menuItems) => {
@@ -582,6 +786,9 @@
                             menuContainer.appendChild(itemLink);
                         });
                     }
+                })
+                .catch((e) => {
+                    showNotification("菜单初始化失败\n" + e, "e");
                 });
         });
     </script>
